<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_controller</name>
  <version>0.0.1</version>
  <description>This package is mainly responsible for controlling PX4 in the OFFBOARD mode by sending offboard control commands and velocity setpoints to PX4.</description>
  <maintainer email="mohamed.moustafa@nxp.com">Mohamed Moustafa</maintainer>
  <license>BSD 3-Clause</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
